Fix compiler warnings.